--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
     <div class="flex-container">
         <div class="title-cell">
-            <p class="small-bold-text">Gameography</p>
+            <p class="small-bold-text sticky-text">Gameography</p>
         </div>
         <div class="content-cell">
             <p class="body-text">For each of these titles I led the development from concept to creation by serving as director, producer, art director, and designer.</p>
@@ -40,7 +40,7 @@
     </div>
     <div class="flex-container">
         <div class="title-cell">
-            <p class="small-bold-text">Writing</p>
+            <p class="small-bold-text sticky-text">Writing</p>
         </div>
         <div class="content-cell">
             <p class="body-text"><a class="hyperlink" href="https://medium.theuxblog.com/user-persona-development-guide-f62909bfdf8a">User Persona Development Guide</a></p>
@@ -49,7 +49,7 @@
     </div>
     <div class="flex-container">
         <div class="title-cell">
-            <p class="small-bold-text">Public Speaking</p>
+            <p class="small-bold-text sticky-text">Public Speaking</p>
         </div>
         <div class="content-cell">
             <p class="body-text"><a class="hyperlink" href="https://www.youtube.com/watch?v=U0Mb5N4Skc0&t">User Experience Design in Gaming, PAX East 2020</a></p>
@@ -57,7 +57,7 @@
     </div>
     <div class="flex-container">
         <div class="title-cell">
-            <p class="small-bold-text">Press</p>
+            <p class="small-bold-text sticky-text">Press</p>
         </div>
         <div class="content-cell">
             <p class="body-text"><a class="hyperlink" href="https://www.loversmagazine.com/interviews/alberto-de-la-cruz">Interview with Alberto de la Cruz, Lovers Magazine</a></p>
@@ -66,7 +66,7 @@
     </div>
     <div class="flex-container">
         <div class="title-cell">
-            <p class="small-bold-text">Miscellaneous</p>
+            <p class="small-bold-text sticky-text">Miscellaneous</p>
         </div>
         <div class="content-cell">
             <p class="body-text">A small collection of other projects I’ve created, sometimes for work and sometimes for fun.</p>
@@ -78,7 +78,7 @@
     </div>
     <div class="flex-container">
         <div class="title-cell">
-            <p class="small-bold-text">Social Media</p>
+            <p class="small-bold-text sticky-text">Social Media</p>
         </div>
         <div class="content-cell">
             <p class="body-text">Feel free to reach out to me on any of these platforms.</p>
