--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <p class="body-text">I build applications that are both fun and approachable, where every decision is driven by design and player satisfaction. I believe game design is an iterative process, where communication and solving player needs are critical. I’m great at hitting tight deadlines by figuring out simple solutions to complex problems, cutting the right corners in the process. In my spare time I like playing <a class="hyperlink" href="https://en.m.wikipedia.org/wiki/Sixth_generation_of_video_game_consoles">sixth-generation video games</a>, reading manga, and drinking cold brew.</p>
         </div>
     </div>
+    <div class="divider-block"></div>
     <div class="flex-container">
         <div class="title-cell">
             <p class="small-bold-text sticky-text">Gameography</p>
