--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </div>
         <div class="content-cell">
             <p class="body-text"><a class="hyperlink" href="https://medium.theuxblog.com/user-persona-development-guide-f62909bfdf8a">User Persona Development Guide</a></p>
-            <p class="body-text"><a class="hyperlink" href="https://medium.com/@albertodelacruz/typography-crash-course-simple-rules-for-typesetting-perfect-paragraphs-32e0623699a9">Typography Crash Course–Simple Rules for Typesetting Perfect Paragraphs</a></p>
+            <p class="body-text"><a class="hyperlink" href="https://medium.com/@albertodelacruz/typography-crash-course-simple-rules-for-typesetting-perfect-paragraphs-32e0623699a9">Typography Crash Course&mdash;Simple Rules for Typesetting Perfect Paragraphs</a></p>
         </div>
     </div>
     <div class="flex-container">
