--- a/index.html
+++ b/index.html
@@ -82,14 +82,13 @@
             <p class="small-bold-text sticky-text">Social Media</p>
         </div>
         <div class="content-cell">
-            <p class="big-body-text">Feel free to reach out to me on any of these platforms.</p>
+            <p class="big-body-text">Feel free to reach out!</p>
             <p class="body-text"><a class="hyperlink" href="https://twitter.com/albertotoken">Twitter</a></p>
             <p class="body-text"><a class="hyperlink" href="https://www.linkedin.com/in/albertotoken/">LinkedIn</a></p>
             <p class="body-text"><a class="hyperlink" href="https://medium.com/@albertodelacruz">Medium</a></p>
             <p class="body-text"><a class="hyperlink" href="https://dribbble.com/albertotoken">Dribbble</a></p>
         </div>
     </div>
-    <p class="bold-text">Thank you for stopping by!</p>
 </div>
   </body>
 </html>
