--- a/index.html
+++ b/index.html
@@ -39,6 +39,16 @@
             <p class="body-text">Arithmatic (<a class="hyperlink" href="https://apps.apple.com/us/app/arithmatic-master-your-mental-math/id1097565159">iOS</a>)</p>
         </div>
     </div>
+    <!-- <div class="flex-container">
+        <div class="title-cell">
+            <p class="small-bold-text sticky-text">Case Studies</p>
+        </div>
+        <div class="content-cell">
+            <p class="body-text"><a class="hyperlink" href="https://albertodelacruz.io/projects/stayawhile/">Stayawhile</a></p>
+            <p class="body-text"><a class="hyperlink" href="https://albertodelacruz.io/projects/stayawhile-dash/">Stayawhile Internal Dashboard</a></p>
+            <p class="body-text"><a class="hyperlink" href="https://albertodelacruz.io/projects/stayabit/">Stayabit Token Sale</a></p>
+        </div>
+    </div> -->
     <div class="flex-container">
         <div class="title-cell">
             <p class="small-bold-text sticky-text">Writing</p>
@@ -87,6 +97,7 @@
             <p class="body-text"><a class="hyperlink" href="https://www.linkedin.com/in/albertotoken/">LinkedIn</a></p>
             <p class="body-text"><a class="hyperlink" href="https://medium.com/@albertodelacruz">Medium</a></p>
             <p class="body-text"><a class="hyperlink" href="https://dribbble.com/albertotoken">Dribbble</a></p>
+            <p class="body-text"><a class="hyperlink" href="mailto:alberto@tokeninteractive.com">Email</a></p>
         </div>
     </div>
 </div>
