--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,700" rel="stylesheet">
     <meta name="google-site-verification" content="cjL7T2XTlh6YrR2x6kqFL4BF-DK5qbYfeFgS8jP2QCU" />
     <link type="text/css" rel="stylesheet" href="../style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+    <script src="../../flickity.pkgd.min.js"></script>
   </head>
   <body>
     <!doctype html>
