--- a/stayawhile/index.html
+++ b/stayawhile/index.html
@@ -20,16 +20,16 @@
             <p class="big-body-text main-text">I was the Lead Product Designer at Stayawhile. Stayawhile's mission was to create a branded network of furnished apartments for stays of a month or more. After passing an initial background check, users would have full access to all of our units and can book them with no concerns about safety or paperwork. All Stayawhile units would be furnished to our brand standards and would come with all the utilities you'd need including wifi, cable, a fully-stocked kitchen, bathroom amenities and much more. At the time there was no app in place and zero apartments in our portfolio. I was a part of the tech team, a scrappy team of three consisting of our CTO, our full-stack developer and me. In two months I had wireframed, designed, branded and coded the front-end for the entire first-version of the application.</p>
         </div>
         <div data-flickity='{ "wrapAround": true, "percentPosition": false, "imagesLoaded": true, "freeScroll": true, "adaptiveHeight":true }'>
-          <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/landing.jpg">
-          <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/how-it-works.jpg">
-          <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/listing-old.jpg">
+          <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/landing.jpg" class="website-image">
+          <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/how-it-works.jpg" class="website-image">
+          <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/listing-old.jpg" class="website-image">
         </div>
         <p class="big-body-text main-text">With hundreds of wireframes produced in a short amount of time, countless edits to our brand direction and developing the CSS UI library for the entire site, our MVP was ready. The apartment team also had their hands full in leasing, furnishing and setting up utilities in several apartments in the span of a couple months.</p>
         <p class="big-body-text main-text">After initial feedback from customers, we decided to pivot our brand direction, emphasizing a more colorful, younger aesthetic. We hired Big Human to come up with a new aesthetic for us, with a new color scheme and illustration style.</p>
         <div data-flickity='{ "wrapAround": true, "percentPosition": false, "imagesLoaded": true, "freeScroll": true, "adaptiveHeight":true }'>
-          <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/main-new.jpg">
-          <img src="  https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/how.png">
-          <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/brand.jpg">
+          <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/main-new.jpg" class="website-image">
+          <img src="  https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/how.png" class="website-image">
+          <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/brand.jpg" class="website-image">
         </div>
         <p class="big-body-text main-text">Most pages on the site are static, with the exception of the user dashboard and locations/listings pages which were dynamically populated using a Python framework called Flask.</p>
         <p class="big-body-text main-text">The user dashboard has multiple states:</p>
@@ -46,21 +46,21 @@
             <li><strong>Previous Bookings:</strong> A list of previous units the user has stayed in, with invoice details.</li>
           </ul>
         <div data-flickity='{ "wrapAround": true, "percentPosition": false, "imagesLoaded": true, "freeScroll": true, "adaptiveHeight":true }'>
-          <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/bg1.png">
-          <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/bg2.png">
-          <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/bg3.png">
-          <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/bg4.png">
+          <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/bg1.png" class="website-image">
+          <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/bg2.png" class="website-image">
+          <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/bg3.png" class="website-image">
+          <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/bg4.png" class="website-image">
         </div>
         <p class="big-body-text main-text">The Locations page is arguably the most complex page on the site. This is where users would most likely spend the majority of their time. Since we wanted to encourage users to look at the apartments we offer as a network, units from every city we're established in&mdash;NYC, Boston and Philadelphia&mdash;can be viewed at once from this page.</p>
         <p class="big-body-text main-text">In order to show multiple cities within the same apartment view, I coded a 'sticky' interaction where the city map follows the units until the bottom of its container.</p>
         <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/locations.gif">
         <p class="big-body-text main-text">I designed a unique set of symbols to represent unique amenities and policies found in the apartment building.</p>
-        <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/icons.png">
+        <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/icons.png" class="website-image">
         <!-- INSERT AMENITY ICONS -->
         <p class="big-body-text main-text">Since we frequently have multiple units within the same building, I designed a nested display where the full cell represents a building with its own metadata and the actual apartment units are nested inside with its corresponding information. The building address, neighborhood, amenities and policies are also 'sticky', following the user scrolling down the page until it reaches the end of its container.</p>
 
         <!-- INSERT BUILDING CELL -->
-        <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/building-cell.jpg">
+        <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/building-cell.jpg" class="website-image">
         <!-- INSERT BUILDING CELL -->
 
         <p class="big-body-text main-text">Since this is a single page with almost thirty apartments, filtering is essential to the user experience. I designed a set of filters for the following parameters:</p>
@@ -77,10 +77,10 @@
 
         <!-- INSERT SELECTED FILTERS -->
         <div data-flickity='{ "wrapAround": true, "percentPosition": false, "imagesLoaded": true, "freeScroll": true, "adaptiveHeight":true }'>
-          <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/Screen+Shot+2017-12-13+at+8.01.31+PM.png">
-          <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/Screen+Shot+2017-12-13+at+8.01.48+PM.png">
-          <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/Screen+Shot+2017-12-13+at+8.02.06+PM.png">
-          <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/Screen+Shot+2017-12-13+at+8.02.19+PM.png">
+          <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/Screen+Shot+2017-12-13+at+8.01.31+PM.png" class="website-image">
+          <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/Screen+Shot+2017-12-13+at+8.01.48+PM.png" class="website-image">
+          <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/Screen+Shot+2017-12-13+at+8.02.06+PM.png" class="website-image">
+          <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/Screen+Shot+2017-12-13+at+8.02.19+PM.png" class="website-image">
         </div>
         <!-- INSERT SELECTED FILTERS -->
 
@@ -88,21 +88,21 @@
 
         <!-- FLICKITY EMPTY ERROR STATES -->
         <div data-flickity='{ "wrapAround": true, "percentPosition": false, "imagesLoaded": true, "freeScroll": true, "adaptiveHeight":true }'>
-          <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/empty-state.png">
-          <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/error-state.png">
+          <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/empty-state.png" class="website-image">
+          <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/error-state.png" class="website-image">
         </div>
         <!-- FLICKITY EMPTY ERROR STATES -->
 
         <p class="big-body-text main-text">I also designed a view for apartments under renovation or furnishing that is available to be booked.</p>
 
         <!-- TRANSFORMATION IN PROGRESS -->
-        <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/transformation.jpg">
+        <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/transformation.jpg" class="website-image">
         <!-- TRANSFORMATION IN PROGRESS -->
 
         <p class="big-body-text main-text">Once you click on a unit, you're taken to its unit page where you can get a full size gallery, more information on the amenities and policies in-place and a booking block, where users can see when the unit is available and book based on that availability.</p>
 
         <!-- FLICKITY LISTING -->
-        <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/listing.jpg">
+        <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/listing.jpg" class="website-image">
     </div>
 </div>
   </body>
