--- a/stayawhile/index.html
+++ b/stayawhile/index.html
@@ -19,14 +19,14 @@
             <p class="bold-text">Stayawhile</p>
             <p class="big-body-text main-text">I was the Lead Product Designer at Stayawhile. Stayawhile's mission was to create a branded network of furnished apartments for stays of a month or more. After passing an initial background check, users would have full access to all of our units and can book them with no concerns about safety or paperwork. All Stayawhile units would be furnished to our brand standards and would come with all the utilities you'd need including wifi, cable, a fully-stocked kitchen, bathroom amenities and much more. At the time there was no app in place and zero apartments in our portfolio. I was a part of the tech team, a scrappy team of three consisting of our CTO, our full-stack developer and me. In two months I had wireframed, designed, branded and coded the front-end for the entire first-version of the application.</p>
         </div>
-        <div data-flickity='{ "wrapAround": true, "percentPosition": false, "imagesLoaded": true, "freeScroll": true, "adaptiveHeight":true }'>
+        <div data-flickity='{ "wrapAround": true, "percentPosition": false, "imagesLoaded": true, "freeScroll": true, "adaptiveHeight":true }' class="images-box">
           <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/landing.jpg" class="website-image">
           <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/how-it-works.jpg" class="website-image">
           <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/listing-old.jpg" class="website-image">
         </div>
         <p class="big-body-text main-text">With hundreds of wireframes produced in a short amount of time, countless edits to our brand direction and developing the CSS UI library for the entire site, our MVP was ready. The apartment team also had their hands full in leasing, furnishing and setting up utilities in several apartments in the span of a couple months.</p>
         <p class="big-body-text main-text">After initial feedback from customers, we decided to pivot our brand direction, emphasizing a more colorful, younger aesthetic. We hired Big Human to come up with a new aesthetic for us, with a new color scheme and illustration style.</p>
-        <div data-flickity='{ "wrapAround": true, "percentPosition": false, "imagesLoaded": true, "freeScroll": true, "adaptiveHeight":true }'>
+        <div data-flickity='{ "wrapAround": true, "percentPosition": false, "imagesLoaded": true, "freeScroll": true, "adaptiveHeight":true }' class="images-box">
           <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/main-new.jpg" class="website-image">
           <img src="  https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/how.png" class="website-image">
           <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/brand.jpg" class="website-image">
@@ -45,7 +45,7 @@
             <li><strong>Active Booking:</strong> At the date of your upcoming booking, the dashboard UI will reflect this as an active booking, with users able to lengthen their stay. They will not be able to shorten or cancel at this point.</li>
             <li><strong>Previous Bookings:</strong> A list of previous units the user has stayed in, with invoice details.</li>
           </ul>
-        <div data-flickity='{ "wrapAround": true, "percentPosition": false, "imagesLoaded": true, "freeScroll": true, "adaptiveHeight":true }'>
+        <div data-flickity='{ "wrapAround": true, "percentPosition": false, "imagesLoaded": true, "freeScroll": true, "adaptiveHeight":true }' class="images-box">
           <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/bg1.png" class="website-image">
           <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/bg2.png" class="website-image">
           <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/bg3.png" class="website-image">
@@ -76,7 +76,7 @@
         <p class="big-body-text main-text">Once your filters were selected, I wanted users to be able to tell for the most part what they had selected without needing to open up the filter again. For the dates and price, a simple text change would suffice. For amenities and policies, I inserted the up to two of the selected icons into the button itself. Any number of selected items larger than two would be replaced by the number representing the amount selected there.</p>
 
         <!-- INSERT SELECTED FILTERS -->
-        <div data-flickity='{ "wrapAround": true, "percentPosition": false, "imagesLoaded": true, "freeScroll": true, "adaptiveHeight":true }'>
+        <div data-flickity='{ "wrapAround": true, "percentPosition": false, "imagesLoaded": true, "freeScroll": true, "adaptiveHeight":true }' class="images-box">
           <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/Screen+Shot+2017-12-13+at+8.01.31+PM.png" class="website-image">
           <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/Screen+Shot+2017-12-13+at+8.01.48+PM.png" class="website-image">
           <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/Screen+Shot+2017-12-13+at+8.02.06+PM.png" class="website-image">
@@ -87,7 +87,7 @@
         <p class="big-body-text main-text">It was also important to design both an empty state if the filters turned up no units and an error state in case anything went wrong with the filtering system.</p>
 
         <!-- FLICKITY EMPTY ERROR STATES -->
-        <div data-flickity='{ "wrapAround": true, "percentPosition": false, "imagesLoaded": true, "freeScroll": true, "adaptiveHeight":true }'>
+        <div data-flickity='{ "wrapAround": true, "percentPosition": false, "imagesLoaded": true, "freeScroll": true, "adaptiveHeight":true }' class="images-box">
           <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/empty-state.png" class="website-image">
           <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/error-state.png" class="website-image">
         </div>
