--- a/stayawhile/index.html
+++ b/stayawhile/index.html
@@ -59,7 +59,7 @@
         <div class="images-box">
         <p class="big-body-text main-text">The Locations page is arguably the most complex page on the site. This is where users would most likely spend the majority of their time. Since we wanted to encourage users to look at the apartments we offer as a network, units from every city we're established in&mdash;NYC, Boston and Philadelphia&mdash;can be viewed at once from this page.</p>
         <p class="big-body-text main-text">In order to show multiple cities within the same apartment view, I coded a 'sticky' interaction where the city map follows the units until the bottom of its container.</p>
-        <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/locations.gif">
+        <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/locations.gif" class="website-image">
         <p class="big-body-text main-text">I designed a unique set of symbols to represent unique amenities and policies found in the apartment building.</p>
         <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/icons.png" class="website-image">
         <!-- INSERT AMENITY ICONS -->
