--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </div>
     <!-- <div class="flex-container">
         <div class="title-cell">
-            <p class="small-bold-text sticky-text">Case Studies</p>
+            <p class="small-bold-text sticky-text">UX Work</p>
         </div>
         <div class="content-cell">
             <p class="body-text"><a class="hyperlink" href="https://albertodelacruz.io/projects/stayawhile/">Stayawhile</a></p>
