--- a/stayawhile/index.html
+++ b/stayawhile/index.html
@@ -19,22 +19,10 @@
             <p class="bold-text">Stayawhile</p>
             <p class="big-body-text main-text">I was the Lead Product Designer at Stayawhile. Stayawhile's mission was to create a branded network of furnished apartments for stays of a month or more. After passing an initial background check, users would have full access to all of our units and can book them with no concerns about safety or paperwork. All Stayawhile units would be furnished to our brand standards and would come with all the utilities you'd need including wifi, cable, a fully-stocked kitchen, bathroom amenities and much more. At the time there was no app in place and zero apartments in our portfolio. I was a part of the tech team, a scrappy team of three consisting of our CTO, our full-stack developer and me. In two months I had wireframed, designed, branded and coded the front-end for the entire first-version of the application.</p>
         </div>
-        <div class="images-box">
-            <div data-flickity='{ "wrapAround": true, "percentPosition": false, "imagesLoaded": true, "freeScroll": true, "adaptiveHeight":true }'>
-              <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/landing.jpg" class="website-image">
-              <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/how-it-works.jpg" class="website-image">
-              <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/listing-old.jpg" class="website-image">
-            </div>
-        </div>
+        <img src="https://wip-bucket.s3-us-west-2.amazonaws.com/github/stayawhile/before.png" class="website-image">
         <p class="big-body-text main-text">With hundreds of wireframes produced in a short amount of time, countless edits to our brand direction and developing the CSS UI library for the entire site, our MVP was ready. The apartment team also had their hands full in leasing, furnishing and setting up utilities in several apartments in the span of a couple months.</p>
         <p class="big-body-text main-text">After initial feedback from customers, we decided to pivot our brand direction, emphasizing a more colorful, younger aesthetic. We hired Big Human to come up with a new aesthetic for us, with a new color scheme and illustration style.</p>
-        <div class="images-box">
-            <div data-flickity='{ "wrapAround": true, "percentPosition": false, "imagesLoaded": true, "freeScroll": true, "adaptiveHeight":true }'>
-              <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/main-new.jpg" class="website-image">
-              <img src="  https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/how.png" class="website-image">
-              <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/brand.jpg" class="website-image">
-            </div>
-        </div>
+        <img src="https://wip-bucket.s3-us-west-2.amazonaws.com/github/stayawhile/after.png" class="website-image">
         <p class="big-body-text main-text">Most pages on the site are static, with the exception of the user dashboard and locations/listings pages which were dynamically populated using a Python framework called Flask.</p>
         <p class="big-body-text main-text">The user dashboard has multiple states:</p>
         <ul>
