--- a/stayawhile/index.html
+++ b/stayawhile/index.html
@@ -15,7 +15,7 @@
 <div class="main-container">
     <div id="center-box">
         <div>
-            <p class="small-bold-text">Alberto de la Cruz</p>
+            <p class="small-bold-text"><a href="https://albertodelacruz.io/">Alberto de la Cruz</a></p>
             <p class="bold-text">Stayawhile</p>
             <p class="big-body-text main-text">I was the Lead Product Designer at Stayawhile. Stayawhile's mission was to create a branded network of furnished apartments for stays of a month or more. After passing an initial background check, users would have full access to all of our units and can book them with no concerns about safety or paperwork. All Stayawhile units would be furnished to our brand standards and would come with all the utilities you'd need including wifi, cable, a fully-stocked kitchen, bathroom amenities and much more. At the time there was no app in place and zero apartments in our portfolio. I was a part of the tech team, a scrappy team of three consisting of our CTO, our full-stack developer and me. In two months I had wireframed, designed, branded and coded the front-end for the entire first-version of the application.</p>
         </div>
