--- a/stayawhile-dash/index.html
+++ b/stayawhile-dash/index.html
@@ -44,11 +44,17 @@
         <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile-dash/Dec-13-2017+15-16-00.gif" class="website-image" style="max-width: 350px;">
         <p class="big-body-text main-text">Properties are also divided between Building and Units tabs. The Building tab pertains to all information related to the building itself, including the name, location, amenities, policies, etc. It also hosts a master list of all availability and a calendar view for occupancy.</p>
 
-        <img src="https://wip-bucket.s3-us-west-2.amazonaws.com/github/stayawhile-dash/dash1.png" class="website-image">
+        <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile-dash/Building+Info.png" class="website-image">
+        <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile-dash/Building+Timeline.png" class="website-image">
+        <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile-dash/Building+Availability.png" class="website-image">
 
-        <p class="big-body-text main-text">he Units tab has a sidebar with individual units within that building. It also shows information exclusive to that unit, a list of the furniture within, its availability, timeline and booking history.</p>
+        <p class="big-body-text main-text">The Units tab has a sidebar with individual units within that building. It also shows information exclusive to that unit, a list of the furniture within, its availability, timeline and booking history.</p>
 
-        <img src="https://wip-bucket.s3-us-west-2.amazonaws.com/github/stayawhile-dash/dash2.png" class="website-image">
+        <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile-dash/Units+Info.png" class="website-image">
+        <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile-dash/Units+Timeline.png" class="website-image">
+        <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile-dash/Units+Furniture.png" class="website-image">
+        <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile-dash/Units+Availability.png" class="website-image">
+        <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile-dash/Unit+Booking+History.png" class="website-image">
     </div>
 </div>
   </body>
