--- a/stayawhile-dash/index.html
+++ b/stayawhile-dash/index.html
@@ -38,23 +38,23 @@
             <li><strong>Mark as Complete:</strong> The task requires the user to do something physical in the actual unit, such as moving a couch or calling the landlord, and will only be marked as complete if the task has been done. Likewise, if there's some sort of obstacle preventing the completion of this task, the user can select 'Issue' from a dropdown menu and write what happened in a textbox.</li>
           </ol>
         <p class="big-body-text main-text">For the actual process of setting up units, tasks don't need to be completed in some chronological order, but some tasks require another task to be completed. The solution was nested tasking, similar to nested comment threads in platforms like Reddit. Tasks also have a designated person-in-charge, an ETA for completion and a color key noting how critical it is to complete.</p>
-        <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile-dash/Units+Timeline.png" class="website-image">
+        <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile-dash/Units+Timeline.png" class="website-image blue-border">
         <p class="big-body-text main-text">In setting up a unit, there are multiple roadmaps with different corresponding teams. In Excel, multiple spreadsheets are separated by a fixed set of tabs at the bottom of a document. I borrowed this UI convention for the dashboard due to the team's familiarity with Excel, but Excel's approach lacks the responsiveness we need. My solution to build out a fixed bottom 'dropup' menu.</p>
         <img src="  https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile-dash/Dec-13-2017+15-14-55.gif"class="website-image" >
         <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile-dash/Dec-13-2017+15-16-00.gif" class="website-image" style="max-width: 350px;">
         <p class="big-body-text main-text">Properties are also divided between Building and Units tabs. The Building tab pertains to all information related to the building itself, including the name, location, amenities, policies, etc. It also hosts a master list of all availability and a calendar view for occupancy.</p>
 
-        <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile-dash/Building+Info.png" class="website-image">
-        <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile-dash/Building+Timeline.png" class="website-image">
-        <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile-dash/Building+Availability.png" class="website-image">
+        <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile-dash/Building+Info.png" class="website-image blue-border">
+        <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile-dash/Building+Timeline.png" class="website-image blue-border">
+        <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile-dash/Building+Availability.png" class="website-image blue-border">
 
         <p class="big-body-text main-text">The Units tab has a sidebar with individual units within that building. It also shows information exclusive to that unit, a list of the furniture within, its availability, timeline and booking history.</p>
 
-        <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile-dash/Units+Info.png" class="website-image">
-        <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile-dash/Units+Timeline.png" class="website-image">
-        <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile-dash/Units+Furniture.png" class="website-image">
-        <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile-dash/Units+Availability.png" class="website-image">
-        <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile-dash/Unit+Booking+History.png" class="website-image">
+        <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile-dash/Units+Info.png" class="website-image blue-border">
+        <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile-dash/Units+Timeline.png" class="website-image blue-border">
+        <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile-dash/Units+Furniture.png" class="website-image blue-border">
+        <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile-dash/Units+Availability.png" class="website-image blue-border">
+        <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile-dash/Unit+Booking+History.png" class="website-image blue-border">
     </div>
 </div>
   </body>
