--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
             <p class="small-bold-text sticky-text">UX Work</p>
         </div>
         <div class="content-cell">
-            <p class="body-text"><a class="hyperlink" href="https://albertodelacruz.io/projects/stayawhile/">Stayawhile</a></p>
-            <p class="body-text"><a class="hyperlink" href="https://albertodelacruz.io/projects/stayawhile-dash/">Stayawhile Internal Dashboard</a></p>
-            <p class="body-text"><a class="hyperlink" href="https://albertodelacruz.io/projects/stayabit/">Stayabit Token Sale</a></p>
+            <p class="body-text"><a class="hyperlink" href="https://albertodelacruz.io/stayawhile/">Stayawhile</a></p>
+            <p class="body-text"><a class="hyperlink" href="https://albertodelacruz.io/stayawhile-dash/">Stayawhile Internal Dashboard</a></p>
+            <p class="body-text"><a class="hyperlink" href="https://albertodelacruz.io/stayabit/">Stayabit Token Sale</a></p>
         </div>
     </div> -->
     <div class="flex-container">
