--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <p class="body-text">Arithmatic (<a class="hyperlink" href="https://apps.apple.com/us/app/arithmatic-master-your-mental-math/id1097565159">iOS</a>)</p>
         </div>
     </div>
-    <!-- <div class="flex-container">
+    <div class="flex-container">
         <div class="title-cell">
             <p class="small-bold-text sticky-text">UX Work</p>
         </div>
@@ -47,7 +47,7 @@
             <p class="body-text"><a class="hyperlink" href="https://albertodelacruz.io/stayawhile-dash/">Stayawhile Internal Dashboard</a></p>
             <p class="body-text"><a class="hyperlink" href="https://albertodelacruz.io/stayabit/">Stayabit Token Sale</a></p>
         </div>
-    </div> -->
+    </div>
     <div class="flex-container">
         <div class="title-cell">
             <p class="small-bold-text sticky-text">Writing</p>
